crates/cribo/tests/snapshots/bundled_code@inlined_decorator_shared_identity.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/inlined_decorator_shared_identity/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = globals()[self._entry[1]]
        if module is not None:
            if getattr(module, '_cribo_machinery_loaded', False):
                saved = type(self)._pristine.get(id(module))
                fresh = _cribo.types.SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('shared', None, None, False, {'canonical': 'canonical'})
_cribo_finder_local.register('provider', None, None, False, {'replace_with_shared': 'replace_with_shared', 'wrapped': 'wrapped'})
shared = _cribo.types.SimpleNamespace(__name__='shared')
def canonical():
    return "canonical result"
canonical.__module__ = 'shared'
shared.canonical = canonical
provider = _cribo.types.SimpleNamespace(__name__='provider')
def replace_with_shared(_function):
    return canonical
replace_with_shared.__module__ = 'provider'
@replace_with_shared
def wrapped():
    return "never seen"
try:
    if getattr(wrapped, '__name__', None) == 'wrapped':
        wrapped.__module__ = 'provider'
except (AttributeError, TypeError):
    pass
provider.replace_with_shared = replace_with_shared
provider.wrapped = wrapped
"""Inlined modules must not re-stamp a decorator's SHARED return object.\n\nIdentity stamps for inlined decorated definitions only apply when the\nresult still carries the definition's __name__; the shared `canonical`\nfunction keeps its own __module__/__qualname__.\n"""
print("same object:", wrapped is canonical)
print("module:", wrapped.__module__)
print("qualname:", wrapped.__qualname__)
print("call:", wrapped())
