crates/cribo/tests/snapshots/bundled_code@inlined_import_globals.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/inlined_import_globals/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = globals()[self._entry[1]]
        if module is not None:
            if getattr(module, '_cribo_machinery_loaded', False):
                saved = type(self)._pristine.get(id(module))
                fresh = _cribo.types.SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('provider', None, 'provider', True)
_cribo_finder.register('provider.worker', None, None, False, {'package_name': 'package_name', 'module_name': 'module_name', 'module_doc': 'module_doc'})
provider_worker = _cribo.types.SimpleNamespace(__name__='provider.worker', __doc__="The worker module's docstring.")
provider = _cribo.types.SimpleNamespace(__name__='provider', __initializing__=False, __initialized__=False, __path__=[])
provider.worker = provider_worker
"""The worker module's docstring."""
def package_name():
    return 'provider'
package_name.__module__ = 'provider.worker'
def module_name():
    return 'provider.worker'
module_name.__module__ = 'provider.worker'
def module_doc():
    return "The worker module's docstring."
module_doc.__module__ = 'provider.worker'
provider_worker.module_doc = module_doc
provider_worker.module_name = module_name
provider_worker.package_name = package_name
"""Functions in inlined modules observe their own module's import globals."""
print("package:", package_name())
print("name:", module_name())
print("doc:", module_doc())
worker = provider.worker
